# services/autogenerated/V1/swagger.json
@@ -104,8 +104,7 @@
             "name": "guildID",
             "in": "query",
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string"
             }
           }
         ],
@@ -169,8 +168,7 @@
             "name": "guildID",
             "in": "query",
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string"
             }
           }
         ],
@@ -320,8 +318,7 @@
             "name": "guildID",
             "in": "query",
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string"
             }
           }
         ],
@@ -385,8 +382,7 @@
             "name": "guildID",
             "in": "query",
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string"
             }
           }
         ],
@@ -407,107 +403,6 @@
               "text/json": {
                 "schema": {
                   "$ref": "#/components/schemas/API_Daney.Models.AuthGetTokenResponse"
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        },
-        "security": [
-          {
-            "bearerAuth": [
-              "bearerAuth"
-            ]
-          }
-        ]
-      }
-    },
-    "/api/v1.0/moderationlogging/get-paged": {
-      "get": {
-        "tags": [
-          "ModerationLogging"
-        ],
-        "operationId": "getPaged",
-        "parameters": [
-          {
-            "name": "guildID",
-            "in": "query",
-            "schema": {
-              "type": "integer",
-              "format": "int64"
-            }
-          },
-          {
-            "name": "type",
-            "in": "query",
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          },
-          {
-            "name": "sort",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "order",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "limit",
-            "in": "query",
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          },
-          {
-            "name": "offset",
-            "in": "query",
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          },
-          {
-            "name": "search",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/API_Daney.SharedModels.PagedListOfDaney.DataAccess.Entities.ModerationLogging"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/API_Daney.SharedModels.PagedListOfDaney.DataAccess.Entities.ModerationLogging"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/API_Daney.SharedModels.PagedListOfDaney.DataAccess.Entities.ModerationLogging"
                 }
               }
             }
@@ -542,8 +437,7 @@
             "name": "guildID",
             "in": "query",
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string"
             }
           },
           {
@@ -585,19 +479,18 @@
         ]
       }
     },
-    "/api/v1.0/serverkeys/upsertall": {
+    "/api/v1.0/serverkeys/upsert-all": {
       "put": {
         "tags": [
           "ServerKeys"
         ],
-        "operationId": "upsertall",
+        "operationId": "upsertAll",
         "parameters": [
           {
             "name": "guildID",
             "in": "query",
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string"
             }
           }
         ],
@@ -671,8 +564,7 @@
             "name": "guildID",
             "in": "query",
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string"
             }
           }
         ],
@@ -855,8 +747,7 @@
             "name": "userID",
             "in": "query",
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string"
             }
           }
         ],
@@ -911,8 +802,7 @@
             "name": "userID",
             "in": "query",
             "schema": {
-              "type": "integer",
-              "format": "int64"
+              "type": "string"
             }
           },
           {
@@ -971,8 +861,7 @@
         "type": "object",
         "properties": {
           "GuildID": {
-            "type": "integer",
-            "format": "int64"
+            "type": "string"
           },
           "Uids": {
             "type": "array",
@@ -1037,8 +926,7 @@
             "format": "int32"
           },
           "GuildID": {
-            "type": "integer",
-            "format": "int64"
+            "type": "string"
           },
           "Value": {
             "nullable": true
@@ -1051,6 +939,13 @@
             "type": "integer",
             "format": "int32"
           },
+          "Amount": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "Required": {
+            "type": "boolean"
+          },
           "PremiumFeature": {
             "type": "boolean"
           }
@@ -1061,8 +956,7 @@
         "type": "object",
         "properties": {
           "GuildID": {
-            "type": "integer",
-            "format": "int64"
+            "type": "string"
           },
           "UID": {
             "type": "string",
@@ -1078,8 +972,7 @@
         "type": "object",
         "properties": {
           "GuildID": {
-            "type": "integer",
-            "format": "int64",
+            "type": "string",
             "nullable": true
           },
           "UID": {
@@ -1088,70 +981,6 @@
           },
           "Value": {
             "nullable": true
-          }
-        },
-        "additionalProperties": false
-      },
-      "API_Daney.SharedModels.PagedListOfDaney.DataAccess.Entities.ModerationLogging": {
-        "type": "object",
-        "properties": {
-          "rows": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Daney.DataAccess.Entities.ModerationLogging"
-            },
-            "nullable": true,
-            "readOnly": true
-          },
-          "total": {
-            "type": "integer",
-            "format": "int32"
-          }
-        },
-        "additionalProperties": false
-      },
-      "Daney.DataAccess.Entities.ModerationLogging": {
-        "type": "object",
-        "properties": {
-          "UID": {
-            "type": "string",
-            "format": "uuid"
-          },
-          "UserID": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "UserName": {
-            "type": "string",
-            "nullable": true
-          },
-          "GuildID": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "CreatorID": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "CreatorName": {
-            "type": "string",
-            "nullable": true
-          },
-          "MessageID": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "Reason": {
-            "type": "string",
-            "nullable": true
-          },
-          "DateCreated": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "Type": {
-            "type": "integer",
-            "format": "int32"
           }
         },
         "additionalProperties": false
